--- a/index.html
+++ b/index.html
@@ -4,17 +4,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>CIT 230 Assignment Portal | Rombie B. Lagunzad | BYU-Idaho</title>
-        <meta name="description" content="Assignment portal page for Rombie, a student in CIT 230: Web Frontend Development at Brigham Young University-Idaho.">
+        <title>WDD 330 Portfolio | Rombie B. Lagunzad | BYU-Idaho</title>
+        <meta name="description" content="Assignment portal page for Rombie, a student in WDD 330: Web Frontend Development II at Brigham Young University-Idaho.">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129375544-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-        </script>
     </head>
 
     <body>
