--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>WDD 330 Portfolio | Rombie B. Lagunzad | BYU-Idaho</title>
-        <meta name="description" content="Assignment portal page for Rombie, a student in WDD 330: Web Frontend Development II at Brigham Young University-Idaho.">
+        <meta name="description" content="WDD 330 Portfolio of Rombie, a student in WDD 330: Web Frontend Development II at Brigham Young University-Idaho.">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
     </head>
