--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
         <main>
             
             <h2>Block l</h2>
-            <ol>
-                <li></li>
-            </ol>
+            <ol id="activity"></ol>
 
         </main>
         
         <footer>
                 <p>&copy;2021 Rombie Lagunzad - Philippines <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
         </footer>
+        <script src="js/main.js"></script>
     </body>
 
 </html>
