--- a/week1/index.html
+++ b/week1/index.html
@@ -17,7 +17,7 @@
         <main>
             
         <div>Story Name:</div><input id="name_input"></input>
-        <textrea id="story_editor" placeholder="Write a totally awesome story here"></textrea>
+        <textarea id="story_editor" placeholder="Write a totally awesome story here"></textarea>
 
         </main>
         
