--- a/week1/index.html
+++ b/week1/index.html
@@ -15,8 +15,10 @@
             <h1>WDD 330 Web Frontend II Portfolio</h1>
         </header>
         <main>
-            
-        <div>Story Name:</div><input id="name_input"></input>
+        
+        <h2>Story Editor</h2>
+        <h3>Story Name:</h3><input id="name_input"></input>
+        <br>
         <textarea id="story_editor" placeholder="Write a totally awesome story here"></textarea>
 
         </main>
