--- a/week1/index.html
+++ b/week1/index.html
@@ -17,8 +17,13 @@
         <main>
         
         <h2>Story Editor</h2>
+   
         <h3>Story Name:</h3><input id="name_input"></input>
-        <br>
+        <section>
+            <button onclick="loadStory()">Find and Edit It</button>
+            <button onclick="saveStory()">Save It</button>
+            <button onclick="saveStory()">Display It</button>
+        </section>
         <textarea id="story_editor" placeholder="Write a totally awesome story here"></textarea>
 
         </main>
