--- a/week1/index.html
+++ b/week1/index.html
@@ -22,7 +22,7 @@
         <section>
             <button onclick="loadStory()">Find and Edit It</button>
             <button onclick="saveStory()">Save It</button>
-            <button onclick="saveStory()">Display It</button>
+            <button onclick="displayStory()">Display It</button>
         </section>
         <textarea id="story_editor" placeholder="Write a totally awesome story here"></textarea>
 
