--- a/week1/index.html
+++ b/week1/index.html
@@ -16,7 +16,7 @@
         </header>
         <main>
         
-        <h2>Story Editor</h2>
+        <h2>STORY EDITOR</h2>
    
         <h3>Story Name:</h3><input id="name_input"></input>
         <section>
@@ -31,7 +31,7 @@
         <footer>
                 <p>&copy;2021 Rombie Lagunzad - Philippines <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
         </footer>
-        <script src="js/main.js"></script>
+        <script src="../js/main.js"></script>
     </body>
 
 </html>
