--- a/week1/index.html
+++ b/week1/index.html
@@ -16,15 +16,15 @@
         </header>
         <main>
         
-        <h2>STORY EDITOR</h2>
-   
-        <h3>Story Name:</h3><input id="name_input"></input>
-        <section>
-            <button onclick="loadStory()">Find and Edit It</button>
-            <button onclick="saveStory()">Save It</button>
-            <button onclick="displayStory()">Display It</button>
-        </section>
-        <textarea id="story_editor" placeholder="Write a totally awesome story here"></textarea>
+            <h2>STORY EDITOR</h2>
+            <h3>Story Name:</h3><input id="name_input"></input>
+            <section>
+                <button onclick="loadStory()">Find and Edit It</button>
+                <button onclick="saveStory()">Save It</button>
+                <button onclick="displayStory()">Display It</button>
+            </section>
+            <textarea id="story_editor" placeholder="Write a totally awesome story here"></textarea>
+            <section id="story_display"></section>
 
         </main>
         
