--- a/week1/index.html
+++ b/week1/index.html
@@ -27,6 +27,16 @@
             <textarea id="story_editor" placeholder="Write a totally awesome story here"></textarea>
             <section id="story_display"></section>
 
+            <br>
+            <h2>NOTES</h2>
+            <br>
+            <h3>Mobile First Experience</h3>
+            <ul>
+                <li>Mobile traffic up 18.6% over 2013</li>
+                <li>Responsive retrofitting (cheaper and faster)</li>
+                <li>Mobile First (time consuming and costly, provide best experience across many devices)</li>
+            </ul>
+
         </main>
         
         <footer>
