--- a/week1/index.html
+++ b/week1/index.html
@@ -31,7 +31,7 @@
             <h2>NOTES</h2>
             <br>
             <h3>Mobile First Experience</h3>
-            <ul>
+            <ul class="subnotes">
                 <li>Mobile traffic up 18.6% over 2013</li>
                 <li>Responsive retrofitting (cheaper and faster)</li>
                 <li>Mobile First (time consuming and costly, provide best experience across many devices)</li>
