--- a/week1/index.html
+++ b/week1/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <header>
-            <h1>WDD 330 Web Frontend II Portfolio</h1>
+            <h1>WDD 330 Portfolio: Week 1</h1>
         </header>
         <main>
         
