--- a/week1/index.html
+++ b/week1/index.html
@@ -36,7 +36,46 @@
                 <li>Responsive retrofitting (cheaper and faster)</li>
                 <li>Mobile First (time consuming and costly, provide best experience across many devices)</li>
             </ul>
-
+            <h3>How to Improve UX by Understanding Users</h3>
+            <ul class="subnotes">
+                <li>Be there</li>
+                <li>Be useful</li>
+                <li>Be quick (not only fast loading, functionality is also needed)</li>
+                <li>Reachability of the screen using the thumb for important keys</li>
+            </ul>
+            <h3>How to reduce loading speed?</h3>
+            <ul class="subnotes">
+                <li>Reduce image usage</li>
+                <li>SVG/Webfonts are lower bandwidth</li>
+                <li>Optimize and minify CSS and JS files</li>
+                <li>GZIP files to eliminate unnecessary data</li>
+            </ul>
+            <h3>Strategic Menu Design</h3>
+            <ul class="subnotes">
+                <li>Putting primary control within reach</li>
+            </ul>
+            <h3>Mobile-friendly Forms</h3>
+            <ul class="subnotes">
+                <li>Reduce cognitive load</li>
+                <li>Using float labels</li>
+                <li>Enabling auto fill of the form</li>
+                <li>Enable show or hide password in login form</li>
+                <li>Using the credit card field, maximize the box by including all the necessary data and adding spacing with numbers</li>
+                <li>For the number field, use only number pad</li>
+                <li>Linking phone numbers (tel:)</li>
+            </ul>
+            <h3>Mobile Advertising</h3>
+            <ul class="subnotes">
+                <li>Make it simple and use less space (not 40% plus of the screen)</li>
+                <li>Stop using pop up and auto-playing of videos</li>
+                <li>Enabling auto fill of the form</li>
+                <li>Ads should not be obtrusive</li>
+                <li>Content first</li>
+            </ul>
+            <br>
+            <h2>QUESTION</h2>
+            <p>In reducing the website's loading speed in the mobile view, what is the best way to minify CSS and JS files? Do we need to use a tool or plugin?</p>
+            <br>
         </main>
         
         <footer>
