--- a/week1/index.html
+++ b/week1/index.html
@@ -12,11 +12,11 @@
 
     <body>
         <header>
-            <h1>WDD 330 Portfolio: Week 1</h1>
+            <h1><a href="https://djoko77.github.io/wdd330/">WDD 330 Web Frontend II Portfolio</a></h1>
         </header>
         <main>
         
-            <h2>STORY EDITOR</h2>
+            <h2>WEEK 1: STORY EDITOR</h2>
             <br>
             <h3>Story Name:</h3><input id="name_input"></input>
             <section>
@@ -76,6 +76,7 @@
             <h2>QUESTION</h2>
             <p>In reducing the website's loading speed in the mobile view, what is the best way to minify CSS and JS files? Do we need to use a tool or plugin?</p>
             <br>
+            <a class="home-button" href="https://djoko77.github.io/wdd330/">Go Back to Homepage</a>
         </main>
         
         <footer>
