--- a/week2/index.html
+++ b/week2/index.html
@@ -16,7 +16,60 @@
         </header>
         <main>
         
-            <h2>PAGE IS UNDER CONSTRUCTION</h2>            
+            <h2>WEEK 2 Notes</h2>
+            <h3>Chapter 2: Programming Basics</h3>
+            <ul class="subnotes">
+                <li>The syntax used by JavaScript is known as a C-style syntax</li>
+                <li>A block is a series of statements that are collected together inside curly braces. They do not need to be terminated by a semicolon.</li>
+                <li>Some reserved words and cannot be used as name variables</li>
+                <li>JS data types: string, symbol, number, boolean, undefined, null, object</li>
+                <li>Special operator called typeof to determine the value type</li>
+                <li>Variables are used in programming languages to refer to a value stored in memory. They have to be declared before they can be used</li>
+                <li>const is used when the variable will not be reassigned to another value</li>
+                <li>let is used if the variable might be reassigned later in the program</li>
+                <li>To assign a value to a constant or variable, we use the = operator</li>
+                <li>Constant and variable names can start with any upper or lower-case letter, an underscore, _, or dollar character, $. They can also contain numbers, but cannot start with them. They are case sensitive.</li>
+                <li>A string is a collection of characters, such as letters and symbols</li>
+                <li>We can access the properties of a string using dot notation and square brackets</li>
+                <li>Template literals use the backtick character, `, to deliminate the string</li>
+                <li>Symbols are the only primitives that don't have a literal form. The only way to create them is to use the Symbol() function</li>
+                <li>Values tend to be set to undefined by JavaScript, whereas values are usually set to null manually by the programmer</li>
+                <li>Bitwise operators work with operands that are 32-bit integers</li>
+            </ul>
+            <h3>Chapter 3: Arrays, Logic,a nd Loops</h3>  
+            <ul class="subnotes">
+                <li>Destructuring an array is the concept of taking values out of an array and presenting them as individual values</li>
+                <li>The length property can be used as part of the index to find the last item in an array</li>
+                <li>To remove the last item from an array, use the pop() method</li>
+                <li>The shift() method removes the first item in the array</li>
+                <li>The push() method appends a new value to the end of the array</li>
+                <li>The unshift() method appends a new item to the beginning of the array</li>
+                <li>The concat() method - merge an array with one or more arrays</li>
+                <li>The slice() method creates a subarray</li>
+                <li>The splice() method removes items from an array then inserts new items in their place</li>
+                <li>Reverse the order of an array using the reverse() method</li>
+                <li>Sort the order of an array using the sort() method</li>
+                <li>includes() method returns a boolean value depending on whether the array contains a particular element or not</li>
+                <li>An empty set is created using the new operator and Set() constructor</li>
+                <li>Values can be placed into a set using the add method</li>
+                <li>The number of values in a set can be found using the size() method</li>
+                <li>has() method can be used to check if a value is in a set (boolean)</li>
+                <li>The clear() method can be used to remove all values from a set</li>
+                <li>use the Array.from() method to convert a set into an array</li>
+                <li>To look up a value of map, we can use the get() method</li>
+                <li>The switch statement can be used instead of multiple if and else statements</li>
+                <li>if and else statement are used to control the flow of code</li>
+                <li>A for-of loop can be used to iterate over an array</li>
+            </ul>  
+            <h3>Chapter 4: Functions</h3>  
+            <ul class="subnotes">
+                <li>Every Function Has a Name</li>
+                <li>Keep Your Code DRY (Don’t Repeat Yourself)</li>
+                <li>default parameters are values that will be used by the function if no arguments are provided when it is invoked</li>
+                <li>Default parameters should always come after non-default parameters</li>
+                <li>A function that is passed as an argument to another is known as a callback</li>
+            </ul>
+            <h2>CODING EXERCISES</h2>          
             <br>
             <a class="home-button" href="https://djoko77.github.io/wdd330/">Go Back to Homepage</a>
         </main>
