--- a/week2/index.html
+++ b/week2/index.html
@@ -69,7 +69,10 @@
                 <li>Default parameters should always come after non-default parameters</li>
                 <li>A function that is passed as an argument to another is known as a callback</li>
             </ul>
-            <h2>CODING EXERCISES</h2>          
+            <h2>CODING EXERCISES</h2> 
+            <section>
+                <button onclick="clickGreetings()">Click to show greeting!</button>
+            </section>    
             <br>
             <a class="home-button" href="https://djoko77.github.io/wdd330/">Go Back to Homepage</a>
         </main>
