--- a/week2/index.html
+++ b/week2/index.html
@@ -67,15 +67,17 @@
             <h3>Chapter 4: Functions</h3>  
             <ul class="subnotes">
                 <li>Every Function Has a Name</li>
-                <li>Keep Your Code DRY (Don’t Repeat Yourself)</li>
+                <li>Keep Your Code DRY (Dont Repeat Yourself)</li>
                 <li>default parameters are values that will be used by the function if no arguments are provided when it is invoked</li>
                 <li>Default parameters should always come after non-default parameters</li>
                 <li>A function that is passed as an argument to another is known as a callback</li>
             </ul>
+            <br>
             <h2>CODING EXERCISES</h2> 
             <section>
                 <button onclick="clickGreetings()">Click to show greeting!</button>
-            </section>    
+            </section> 
+            <section id="jedi-greeting"></section>   
             <br>
             <a class="home-button" href="https://djoko77.github.io/wdd330/">Go Back to Homepage</a>
         </main>
