--- a/week2/index.html
+++ b/week2/index.html
@@ -74,11 +74,23 @@
             </ul>
             <br>
             <h2>CODING EXERCISES</h2> 
+            <br>
+            <h3>Calling a function</h3>
             <section>
                 <button onclick="clickGreetings()">Click to show greeting!</button>
             </section> 
             <section id="jedi-greeting"></section>   
             <br>
+            <h3>Calling a function</h3>
+            <br>
+            <h3>If condition</h3>
+            <section>
+                <h4>Enter two numbers below:l</h4>
+                <textarea id="number1" placeholder="Enter the first number"></textarea>
+                <textarea id="number2" placeholder="Enter the second number"></textarea>
+                <button onclick="equals()">Click to check if they are equal</button>
+                <p id="show-result"></p>
+            </section>
             <a class="home-button" href="https://djoko77.github.io/wdd330/">Go Back to Homepage</a>
         </main>
         
