--- a/week2/index.html
+++ b/week2/index.html
@@ -81,13 +81,11 @@
             </section> 
             <section id="jedi-greeting"></section>   
             <br>
-            <h3>Calling a function</h3>
-            <br>
             <h3>If condition</h3>
             <section>
-                <h4>Enter two numbers below:l</h4>
-                <textarea id="number1" placeholder="Enter the first number"></textarea>
-                <textarea id="number2" placeholder="Enter the second number"></textarea>
+                <h4>Enter two numbers below:</h4>
+                <input id="number1" placeholder="Enter the first number"></input>
+                <input id="number2" placeholder="Enter the second number"></input>
                 <button onclick="equals()">Click to check if they are equal</button>
                 <p id="show-result"></p>
             </section>
