--- a/week2/index.html
+++ b/week2/index.html
@@ -86,7 +86,7 @@
                 <h4>Enter two numbers below:</h4>
                 <input id="number1" placeholder="Enter the first number"></input>
                 <input id="number2" placeholder="Enter the second number"></input>
-                <button onclick="equals()">Click to check if they are equal</button>
+                <button onclick="equals()">Click here to check if they are equal</button>
                 <p id="show-result"></p>
             </section>
             <a class="home-button" href="https://djoko77.github.io/wdd330/">Go Back to Homepage</a>
