--- a/week2/index.html
+++ b/week2/index.html
@@ -84,11 +84,17 @@
             <h3>If condition</h3>
             <section>
                 <h4>Enter two numbers below:</h4>
-                <input id="number1" placeholder="Enter the first number"></input>
-                <input id="number2" placeholder="Enter the second number"></input>
+                <input type="number" id="number1" placeholder="Enter the first number"></input>
+                <input type="number" id="number2" placeholder="Enter the second number"></input>
                 <button onclick="equals()">Click here to check if they are equal</button>
                 <p id="show-result"></p>
             </section>
+            <br>
+            <h3>Team Activity</h3>
+            <input type="text" id="message" placeholder="Enter the message here:"></input>
+            <button onclick="displayMessage()">Click here to display the message</button>
+            <div id="empty-box"></div>
+
             <a class="home-button" href="https://djoko77.github.io/wdd330/">Go Back to Homepage</a>
         </main>
         
