--- a/week2/index.html
+++ b/week2/index.html
@@ -89,11 +89,18 @@
                 <button onclick="equals()">Click here to check if they are equal</button>
                 <p id="show-result"></p>
             </section>
+
             <br>
-            <h3>Team Activity</h3>
-            <input type="text" id="message" placeholder="Enter the message here:"></input>
+            <h3>Team Activity 1: Displaying Message</h3>
+            <input type="text" id="message" placeholder="Enter a message here:"></input>
             <button onclick="displayMessage()">Click here to display the message</button>
             <div id="empty-box"></div>
+            <br>
+
+            <h3>Team Activity 2: Adding Consecutive Numbers</h3>
+            <input type="number" id="numbers" placeholder="Enter a number here:"></input>
+            <button onclick="conAddition()">Click here to see the result</button>
+            <div id="addition-box"></div>
 
             <a class="home-button" href="https://djoko77.github.io/wdd330/">Go Back to Homepage</a>
         </main>
