--- a/week2/index.html
+++ b/week2/index.html
@@ -102,6 +102,14 @@
             <button onclick="conAddition()">Click here to see the result</button>
             <div id="addition-box"></div>
 
+            
+            <h3>Team Activity 3: Creating an Adding Machine</h3>
+            <input type="number" id="add1" placeholder="Enter the first number here:"></input>
+            <button onclick="addNumbers()">+</button>
+            <input type="number" id="add2" placeholder="Enter the second number here:"></input>
+            <p>Click the + button to add the two numbers<p>
+            <div id="addition-result"></div>
+
             <a class="home-button" href="https://djoko77.github.io/wdd330/">Go Back to Homepage</a>
         </main>
         
