--- a/week2/index.html
+++ b/week2/index.html
@@ -109,9 +109,9 @@
             <br>
 
             <h3>Team Activity 3: Creating an Adding Machine</h3>
-            <input type="number" id="add1" placeholder="Enter the first number here:"></input>
+            <input type="number" id="add1" placeholder="Enter the first number:"></input>
             <button onclick="addNumbers()">+</button>
-            <input type="number" id="add2" placeholder="Enter the second number here:"></input>
+            <input type="number" id="add2" placeholder="Enter the second number:"></input>
             <p>Click the + button to add the two numbers<p>
             <div id="addition-result"></div>
 
