--- a/week2/index.html
+++ b/week2/index.html
@@ -84,8 +84,8 @@
             <h3>If condition</h3>
             <section>
                 <h4>Enter two numbers below:</h4>
-                <input type="number" id="number1" placeholder="Enter the first number"></input>
-                <input type="number" id="number2" placeholder="Enter the second number"></input>
+                <input type="number" id="number1" placeholder="Enter the first number">
+                <input type="number" id="number2" placeholder="Enter the second number">
                 <button onclick="equals()">Click here to check if they are equal</button>
                 <p id="show-result"></p>
             </section>
@@ -93,7 +93,7 @@
             <br>
             <br>
             <h3>Team Activity 1: Displaying Message</h3>
-            <input type="text" id="message" placeholder="Enter a message here:"></input>
+            <input type="text" id="message" placeholder="Enter a message here:">
             <button onclick="displayMessage()">Click here to display the message</button>
             <div id="empty-box"></div>
             
@@ -101,7 +101,7 @@
             <br>
 
             <h3>Team Activity 2: Adding Consecutive Numbers</h3>
-            <input type="number" id="numbers" placeholder="Enter a number here:"></input>
+            <input type="number" id="numbers" placeholder="Enter a number here:">
             <button onclick="conAddition()">Click here to see the result</button>
             <div id="addition-box"></div>
 
@@ -109,9 +109,9 @@
             <br>
 
             <h3>Team Activity 3: Creating an Adding Machine</h3>
-            <input type="number" id="add1" placeholder="Enter the first number:"></input>
+            <input type="number" id="add1" placeholder="Enter the first number:">
             <button onclick="addNumbers()">+</button>
-            <input type="number" id="add2" placeholder="Enter the second number:"></input>
+            <input type="number" id="add2" placeholder="Enter the second number:">
             <p>Click the + button to add the two numbers<p>
             <div id="addition-result"></div>
 
