--- a/week2/index.html
+++ b/week2/index.html
@@ -101,7 +101,7 @@
             <br>
 
             <h3>Team Activity 2: Adding Consecutive Numbers</h3>
-            <input type="number" id="numbers" placeholder="Enter a number here:">
+            <input id="numbers" placeholder="Enter a number here:">
             <button onclick="conAddition()">Click here to see the result</button>
             <div id="addition-box"></div>
 
