--- a/week2/index.html
+++ b/week2/index.html
@@ -102,7 +102,7 @@
 
             <h3>Team Activity 2: Adding Consecutive Numbers</h3>
             <input id="numbers" placeholder="Enter a number here:">
-            <button onclick="conAddition(document.getElementById('numbers').id)">Click here to see the result</button>
+            <button onclick="call(document.getElementById('numbers').id)">Click here to see the result</button>
             <div id="addition-box"></div>
 
             <br>
