--- a/week2/index.html
+++ b/week2/index.html
@@ -100,21 +100,20 @@
             <br>
             <br>
 
-            <h3>Team Activity 2: Adding Consecutive Numbers</h3>
-            <input id="numbers" placeholder="Enter a number here:">
-            <button onclick="conAddition(parseInt(document.getElementById('numbers').value))">Click here to see the result</button>
-            <div id="addition-box"></div>
-
-            <br>
+            <h3>Team Activity 2: Adding Consecutive Numbers / Calculator</h3>
+            <input type="number" id="numberInput" name="number">
+            <button onclick="sumNumber()">Add It Up!</button>
+            <div id="showSum"></div>
             <br>
 
-            <h3>Team Activity 3: Creating an Adding Machine</h3>
-            <input type="number" id="add1" placeholder="Enter the first number:">
-            <button onclick="addNumbers()">+</button>
-            <input type="number" id="add2" placeholder="Enter the second number:">
-            <p>Click the + button to add the two numbers<p>
-            <div id="addition-result"></div>
-
+            <input type="number" id="number1Input" name="number">
+            <input type="number" id="number2Input" name="number">
+            <br>
+            <button onclick="myNumbers('add')">Add ➕</button>
+            <button onclick="myNumbers('subtract')">Subtract ➖</button>
+            <button onclick="myNumbers('multiply')">Multiply ✖️</button>
+            <button onclick="myNumbers('divide')">Divide ➗</button>
+            <div id="sumAll"></div>
             <br>
             <br>
 
@@ -124,7 +123,7 @@
         <footer>
                 <p>&copy;2021 Rombie Lagunzad - Philippines <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
         </footer>
-        <script src="../js/main.js"></script>
+        <script src="../js/week2.js"></script>
     </body>
 
 </html>
