--- a/week3/team.html
+++ b/week3/team.html
@@ -73,27 +73,56 @@
 
       // Array.prototype.filter()
       // 1. Filter the list of inventors for those who were born in the 1500's
- 
+      const result = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year < 1600))
+      console.log(result);
 
       // Array.prototype.map()
       // 2. Give us an array of the inventors' first and last names
+      const fullName = inventors.map(inventor => inventor.first + " " + inventor.last);
+      console.log(fullName);
 
       // Array.prototype.sort()
       // 3. Sort the inventors by birthdate, oldest to youngest
+      const sortAge = inventors.sort((inventor1, inventor2) => inventor1.year > inventor2.year ? 1: -1);
+      console.log(sortAge);
 
       // Array.prototype.reduce()
       // 4. How many years did all the inventors live?
+      const totalYears = inventors.reduce((sumYears, inventor) => { 
+        return sumYears + (inventor.passed - inventor.year)
+      }, 0);
+      console.log(totalYears);
 
       // 5. Sort the inventors by years lived
+      // const life = inventors.sort((inventor1, inventor2) => {
+      //   const lastInventor = inventor1.passed - inventor1.year;
+      //   const nextInventor = inventor2.passed - inventor2.year;
+      //   return lastInventor < nextInventor ? 1 : -1;
+      // })
+      // console.log(life);
+
+      const oldest = inventors.sort(function(a, b) {
+        const lastGuy = a.passed - a.year;
+        const nextGuy = b.passed - b.year;
+        return lastGuy > nextGuy ? -1 : 1;        
+      });
+      console.log(oldest);
 
       // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
       // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
       // goto the link above and open the console. Paste the following two lines in.  That will create a list of links in memory that you can reference through the console. Use that list to finish the problem.
-
+      // const category = document.querySelector('.mw-category');
+      // const links = Array.from(category.querySelectorAll('a'));
+      // const de = links.map(street => street.textContent).filter(streetName => streetName.includes('de'));
 
       // 7. sort Exercise
       // Sort the people alphabetically by last name
-
+      const nameSort = people.sort((name1, name2) => {
+        const [lastName1, firstName1] = name1.split(', ');
+        const [lastName2, firstName2] = name2.split(', ');
+        return lastName1 > lastName2 ? 1 : -1;
+      })
+      console.log(nameSort);
 
       // 8. Reduce Exercise
       // Sum up the instances of each of these
@@ -113,6 +142,15 @@
         'car',
         'truck'
       ];
+      const vehicles = data.reduce((object, item) => {
+        if (!object[item]) {
+          object[item] = 0
+        }
+        object[item]++;
+        return object;
+      }, {});
+
+      console.log(vehicles);
 
     </script>
   </body>
