--- a/week3/index.html
+++ b/week3/index.html
@@ -16,7 +16,7 @@
         </header>
         <main>
         
-            <h2>WEEK 3 Notes</h2>
+            <h2>WEEK 3 NOTES</h2>
             <br>
 
             <h3>Object Methods: this</h3>
