--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <h1><a class="header-link" href="https://djoko77.github.io/wdd330/">WDD 330 Web Frontend II Portfolio</a></h1>
         </header>
         <main>
-            
-            <h2>Block l</h2>
+            <div class="home-img"></div>
+            <h2>Activity</h2>
             <ol id="activity"></ol>
-
+            </div>
         </main>
         
         <footer>
