--- a/week3/index.html
+++ b/week3/index.html
@@ -15,7 +15,7 @@
             <h1><a class="header-link" href="https://djoko77.github.io/wdd330/">WDD 330 Web Frontend II Portfolio</a></h1>
         </header>
         <main>        
-            <div class="notes-section"></div>
+            <div class="notes-section">
                 <h2>WEEK 3 NOTES</h2>
                 <br>
 
