--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
             <h1><a class="header-link" href="https://djoko77.github.io/wdd330/">WDD 330 Web Frontend II Portfolio</a></h1>
         </header>
         <main>
-            <div class="hero-img">
-                <img class="home-img" src="img/computer1.jpg" alt="computer">
-                <h2>Activity</h2>
-                <ol id="activity"></ol>
+            <div class="banner">
+                <div>
+                    <img class="home-img" src="img/computer1.jpg" alt="computer">
+                </div>
+                <div>
+                    <h2>Activity</h2>
+                    <ol id="activity"></ol>
+                </div>
             </div>
         </main>
         
