--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
 
     <body>
         <header>
-            <h1><a class="header-link" href="https://djoko77.github.io/wdd330/">WDD 330 Web Frontend II Portfolio</a></h1>
+            <h1><a class="header-link" href="https://djoko77.github.io/wdd330/">WDD 330 Portfolio</a></h1>
         </header>
         <main>
             <div class="banner">
-                <div>
                     <img class="home-img" src="img/computer1.jpg" alt="computer">
-                </div>
-                <div>
-                    <h2>Activity</h2>
+                <div class="home-content"> 
+                    <h2 class="banner-title">Activity</h2>
                     <ol id="activity"></ol>
                 </div>
             </div>
