--- a/week2/index.html
+++ b/week2/index.html
@@ -17,7 +17,7 @@
         <main>
             <div class="column">       
                 <div class="notes-section">
-                    <h2>WEEK 2 Notes</h2>
+                    <h2>WEEK 2 NOTES</h2>
                  
                     <h3>Chapter 2: Programming Basics</h3>
                     <ul class="subnotes">
