--- a/week1/index.html
+++ b/week1/index.html
@@ -17,7 +17,7 @@
         <main>
             <div class="column">       
                 <div class="notes-section">
-            <h2>NOTES</h2>
+            <h2>WEEK 1 NOTES</h2>
             <h3>Mobile First Experience</h3>
             <ul class="subnotes">
                 <li>Mobile traffic up 18.6% over 2013</li>
