--- a/week4/team.html
+++ b/week4/team.html
@@ -11,7 +11,26 @@
     </head>
 
     <body>
-
+        <main>
+            <h1>Tic Tac Toe</h1>
+            <table>
+                <tr>
+                    <th id="up-left"></th>
+                    <th id="up-mid"></th>
+                    <th id="up-right"></th>
+                </tr>
+                <tr>
+                    <th id="mid-left"></th>
+                    <th id="mid-mid"></th>
+                    <th id="mid-right"></th>
+                </tr>
+                <tr>
+                    <th id="down-left"></th>
+                    <th id="down-mid"></th>
+                    <th id="down-right"></th>
+                </tr>
+            </table>
+        </main>
         <script src="../js/week4.js"></script>
     </body>
 
