--- a/week4/team.html
+++ b/week4/team.html
@@ -30,6 +30,7 @@
                     <th id="down-right"></th>
                 </tr>
             </table>
+            <div class="player-notes">Player <span class="turn">1</span>'s Turn</div>
         </main>
         <script src="../js/week4.js"></script>
     </body>
