--- a/week2/index.html
+++ b/week2/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <header>
-            <h1><a class="header-link" href="https://djoko77.github.io/wdd330/">WDD 330 Web Frontend II Portfolio</a></h1>
+            <h1><a class="header-link" href="https://djoko77.github.io/wdd330/">WDD 330 Portfolio</a></h1>
         </header>
         <main>
             <div class="column">       
