--- a/week4/index.html
+++ b/week4/index.html
@@ -72,7 +72,16 @@
                     <div class="coding-section">
                         <h2>CODING EXERCISES</h2>
                         <br>
-                        <h3>Objects</h3>
+                        <h3>Search Bar using Form</h3>
+                        <form name='search' action='/search'>
+                            <input name='searchInput'>
+                            <button type='submit'>Search Now</button>    
+                        </form>
+                        <br>
+                        <h3>OOP in JavaScript</h3>
+                        <p>Create a class called Person which accepts the name of a person as a string, and his/her age as a number.</p>
+                        <p>The Person class should have a method called describe which returns a string with the following syntax: "name, age years old". So for example, if John is 19 years old then the function describe of his object will return "John, 19 years old"</p>
+                        <button onclick="clickAge()">Click here to see Jill's age</button>
                     </div>
                 <br>
                 <br>
