--- a/week4/team.html
+++ b/week4/team.html
@@ -30,7 +30,7 @@
                 <button onclick="resetBoard()">Reset</button> 
             </form>
         </main>
-        <script src="../js/week4.js"></script>
+        <script src="../js/tictac.js"></script>
     </body>
 
 </html>
