--- a/week4/team.html
+++ b/week4/team.html
@@ -4,13 +4,16 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Week 4 Team Activity</title>
-        <meta name="description" content="week 4 team activity">
-        <link rel="stylesheet" href="../styles/normalize.css">
+        <title>WDD 330 Portfolio | Rombie B. Lagunzad | BYU-Idaho</title>
+        <meta name="description" content="WDD 330 Portfolio of Rombie, a student in WDD 330: Web Frontend Development II at Brigham Young University-Idaho.">
+        <link rel="stylesheet" href="../styles/main.css">
         <link rel="stylesheet" href="../styles/tictac.css">
     </head>
 
     <body>
+        <header>
+            <h1><a class="header-link" href="https://djoko77.github.io/wdd330/">WDD 330 Portfolio</a></h1>
+        </header>
         <main>
             <h1>Tic Tac Toe</h1>
             <form>
@@ -30,6 +33,10 @@
                 <button onclick="resetBoard()">Reset</button> 
             </form>
         </main>
+        
+        <footer>
+                <p>&copy;2022 Rombie Lagunzad - Philippines <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
+        </footer>
         <script src="../js/tictac.js"></script>
     </body>
 
