--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
         <main>
             <div class="banner">
                     <img class="home-img" src="img/computer1.jpg" alt="computer">
-                <div class="home-content"> 
-                    <h2 class="banner-title">Activity</h2>
-                    <ol id="activity"></ol>
+                        <div>
+                            <div class="home-content"> 
+                                <h2 class="banner-title">Activity</h2>
+                                <ol id="activity"></ol>
+                                <ol class="challenges">
+                                    <li><a href="week4/team.html">Tic Tac Toe Game</a></li>
+                                </ol>
+                            </div>
+                        </div>
                 </div>
-            </div>
         </main>
         
         <footer>
