--- a/index.html
+++ b/index.html
@@ -19,11 +19,19 @@
                     <img class="home-img" src="img/computer1.jpg" alt="computer">
                         <div>
                             <div class="home-content"> 
-                                <h2 class="banner-title">Activity</h2>
-                                <ol id="activity"></ol>
-                                <ol class="challenges">
-                                    <li><a href="week4/team.html">Tic Tac Toe Game</a></li>
-                                </ol>
+                                <div class="column">
+                                    <div class="columnA">
+                                        <h2 class="banner-title">Weekly Notes</h2>
+                                        <ol id="activity"></ol>
+                                    </div>
+                           
+                                    <div class="columnB">
+                                        <h2 class="banner-title">Coding Activity</h2>
+                                        <ol class="challenges">
+                                            <li><a href="week4/team.html">Tic Tac Toe Game</a></li>
+                                        </ol>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                 </div>
