--- a/week2/index.html
+++ b/week2/index.html
@@ -123,7 +123,8 @@
         </main>
         
         <footer>
-                <p>&copy;2021 Rombie Lagunzad - Philippines <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
+            <p>&copy;2022 Rombie Lagunzad - Philippines</p>
+            <p><a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
         </footer>
         <script src="../js/week2.js"></script>
     </body>
