--- a/week4/team.html
+++ b/week4/team.html
@@ -15,7 +15,7 @@
             <h1><a class="header-link" href="https://djoko77.github.io/wdd330/">WDD 330 Portfolio</a></h1>
         </header>
         <main>
-            <h1>Tic Tac Toe</h1>
+            <h2>Tic Tac Toe</h2>
             <form>
                 <div class="tictac">
                     <div id="up-left" class="board"></div>
@@ -35,7 +35,8 @@
         </main>
         
         <footer>
-                <p>&copy;2022 Rombie Lagunzad - Philippines <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
+                <p>&copy;2022 Rombie Lagunzad - Philippines</p>
+                <p><a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
         </footer>
         <script src="../js/tictac.js"></script>
     </body>
