--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                                         <h2 class="banner-title">Coding Activity</h2>
                                         <ol class="challenges">
                                             <li><a href="week4/team.html">Tic Tac Toe Game</a></li>
+                                            <li><a href="week5/team1.html">Hiking App</a></li>
                                         </ol>
                                     </div>
                                 </div>
